feat: Implement CSRF protection and refine JWT authentication, while refactoring `MarcacaoService` with a dedicated validator and pagination.